Before transforming to functional component